# rpi-pico-imu-relay

./: .gitignore  CMakeLists.txt  README.md
Config/: FreeRTOSConfig.h
app/: CMakeLists.txt  bno055_driver_interface.c  bno055_driver_interface.h  logging.c  logging.h  main.c  main.h
scripts/: receive_sensor_i2c.py
